fix: homepage banenr overlapping nav menu

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -219,7 +219,7 @@
   &__mobile {
     position: fixed;
     top: 0;
-    left: -101%;
+    left: -150%;
     width: 100vw;
     height: 100vh;
     padding: 20px 1rem;
